auto-commit for b8d02b87-2369-4be9-97a0-2001f23d7560